argocd/k8s/emp/emp-deplayment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-v1
  namespace: default
  labels:
    app: employees
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employees
      # version: v1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: employees
        version: v1
    spec:
      containers:
      - name: employees
        image:  moazrefat/app:employee
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "100m"
            memory: "150Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 8080
