argocd/k8s/emp/emp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: employees-getway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: v1
kind: Service
metadata:
  name: employees
  namespace: default
  labels:
    app: employees
    service: employees
spec:
  ports:
  - port: 8080
    # name: http
  selector:
    app: employees
    # version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employees-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - employees-getway
  http:
  - match:
    - uri:
        exact: /api/version
    - uri:
        prefix: /api/details
    - uri:
        prefix: /api/register
    - uri:
        prefix: /api/health
    - uri:
        prefix: /api/hostname
    - uri:
        prefix: /api/info
    route:
      - destination:
          host: employees
          # subnet: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: employees
  namespace: default
spec:
  host: employees
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  - labels:
      version: v3
    name: v3
